test/corpus/enums.txt
=========================
ENUMS: empty
=========================

enum EnumType : int {}

----

(schema
    (enum name: (ident) type: (scalar_type))
)

=========================
ENUMS: missing type
:error
=========================

enum EnumType {}

----

=========================
ENUMS: single
=========================

enum EnumType : byte { A }

----

(schema
    (enum name: (ident) type: (scalar_type)
        (enum_field name: (ident))
    )
)

=========================
ENUMS: single comma
=========================

enum EnumType : short { A, }

----

(schema
    (enum name: (ident) type: (scalar_type)
        (enum_field name: (ident))
    )
)

=========================
ENUMS: default values
=========================

enum EnumType : short {
    A = 3,
    B,
    C = 0xc,
}

----

(schema
    (enum name: (ident) type: (scalar_type)
        (enum_field name: (ident) value: (integer_constant))
        (enum_field name: (ident))
        (enum_field name: (ident) value: (integer_constant))
    )
)

=========================
ENUMS: type attributes
=========================

enum EnumType : ushort (bit_fields) { A, B, C }

----

(schema
    (enum name: (ident) type: (scalar_type) (metadata (attribute name: (ident)))
        (enum_field name: (ident))
        (enum_field name: (ident))
        (enum_field name: (ident))
    )
)

=========================
ENUMS: value attributes
=========================

enum EnumType : ushort { A (k: 3), B (required), C (id) }

----

(schema
    (enum name: (ident) type: (scalar_type)
        (enum_field name: (ident) (metadata (attribute name: (ident) value: (integer_constant))))
        (enum_field name: (ident) (metadata (attribute name: (ident))))
        (enum_field name: (ident) (metadata (attribute name: (ident))))
    )
)

=========================
ENUMS: comments
=========================

enum EnumType : ushort { A, /* comment one */ B,
    // comment two
    // comment three
    C, // comment four
 }

----

(schema
    (enum name: (ident) type: (scalar_type)
        (enum_field name: (ident))
        (comment)
        (enum_field name: (ident))
        (comment)
        (comment)
        (enum_field name: (ident))
        (comment)
    )
)

=========================
ENUMS: leading comment
=========================

enum EnumType : ushort {
    // comment
    A,
 }

enum EnumType2 : ushort {
    // comment
    // comment
    A,
 }

----

(schema
    (enum name: (ident) type: (scalar_type)
        (comment)
        (enum_field name: (ident))
    )
    (enum name: (ident) type: (scalar_type)
        (comment)
        (comment)
        (enum_field name: (ident))
    )
)

=========================
ENUMS: final comment
=========================

enum EnumType : ushort {
    A,
    // comment
 }

enum EnumType2 : ushort {
    A
    // comment
 }

enum EnumType3 : ushort {
    A
    // comment
    // comment
 }

----

(schema
    (enum name: (ident) type: (scalar_type)
        (enum_field name: (ident))
        (comment)
    )
    (enum name: (ident) type: (scalar_type)
        (enum_field name: (ident))
        (comment)
    )
    (enum name: (ident) type: (scalar_type)
        (enum_field name: (ident))
        (comment)
        (comment)
    )
)


=========================
ENUMS: leading comma
:error
=========================

enum EnumType : ushort {
    ,
    A
}

----
