test/corpus/file_attributes.txt
==========================
FILE ATTRIBUTES: extension
==========================

file_extension 'single';
file_extension "double";
file_extension "";
file_extension '';

----

(schema
    (file_extension name: (string_constant))
    (file_extension name: (string_constant))
    (file_extension name: (string_constant))
    (file_extension name: (string_constant))
)

==========================
FILE ATTRIBUTES: identifier
==========================

file_identifier 'single';
file_identifier "double";
file_identifier "";
file_identifier '';

----

(schema
    (file_identifier name: (string_constant))
    (file_identifier name: (string_constant))
    (file_identifier name: (string_constant))
    (file_identifier name: (string_constant))
)


==========================
FILE ATTRIBUTES: root table
==========================

root_type Foo;

----

(schema (root_type type: (ident)))
