test/corpus/includes.txt
=========================
INCLUDES: strings
=========================

include "foo/bar/baz.fbs";
include 'foo/bar/baz.fbs';

----

(schema
    (include path: (string_constant))
    (include path: (string_constant))
)
