test/corpus/json.txt
=========================
OBJECTS: empty
=========================

{}

----

(schema
    (json_object)
)

=========================
OBJECTS: quoted or unquoted keys
=========================

{
    "k1": 3,
    k2: "foo",
}

----

(schema
    (json_object
        (pair key: (string_constant) value: (integer_constant))
        (pair key: (ident) value: (string_constant))
    )
)

=========================
OBJECTS: array fields
=========================

{
    k1: [1,2,3],
    k1: ["s"],
}

----

(schema
    (json_object
        (pair key: (ident) value: (json_array (integer_constant) (integer_constant) (integer_constant)))
        (pair key: (ident) value: (json_array (string_constant)))
    )
)

=========================
OBJECTS: array of object fields
=========================

{
    k1: [{a: 1}, {a: 2}],
}

----

(schema
    (json_object
        (pair key: (ident)
            value: (json_array
                (json_object (pair key: (ident) value: (integer_constant)))
                (json_object (pair key: (ident) value: (integer_constant)))
            )
        )
    )
)
