test/corpus/namespaces.txt
=========================
NAMESPACES: single
=========================

namespace ns;

----

(schema
    (namespace name: (ident))
)

=========================
NAMESPACES: dot separated
=========================

namespace com.foo.ns;

----

(schema
    (namespace
        name: (ident) name: (ident) name: (ident))
)

=========================
NAMESPACES: table fields
=========================

table Foo {
    one: com.two.One;
    two: One;
    vone: [com.tree.Two];
    vtwo: [One];
}

---

(schema
    (table name: (ident)
        (table_field name: (ident)
            type: (qualified_ident
                scope: (qualified_ident
                    scope: (ident)
                    name: (ident)
                )
                name: (ident)
            )
        )
        (table_field name: (ident)
            type: (ident)
        )
        (table_field name: (ident)
            type: (vector_type
                element: (qualified_ident
                    scope: (qualified_ident
                        scope: (ident)
                        name: (ident)
                    )
                    name: (ident)
                )
            )
        )
        (table_field name: (ident)
            type: (vector_type element: (ident))
        )
    )
)

=========================
NAMESPACES: union members
=========================

union UnionType { com.foo.TableOne, com.TableTwo, }

----

(schema
    (union name: (ident)
        (union_field
            type: (qualified_ident
                scope: (qualified_ident
                    scope: (ident)
                    name: (ident))
                name: (ident)))
        (union_field
            type: (qualified_ident
                scope: (ident)
                name: (ident)))
    )
)

=========================
NAMESPACES: defaults
=========================
table TableType {
    a: EnumType = ns.Foo;
}

---

(schema
    (table name: (ident)
        (table_field name: (ident)
            type: (ident)
            default: (qualified_ident scope: (ident) name: (ident)))
    )
)

=========================
NAMESPACES: root_type
=========================

root_type ns.bar.foo.Baz;

---

(schema
                     ; ns.bar.foo.Baz
    (root_type type: (qualified_ident
               ; ns.bar.foo
        scope: (qualified_ident
                   ; ns.bar
            scope: (qualified_ident
                       ; ns
                scope: (ident)
                       ; bar
                name: (ident))
                  ; foo
            name: (ident))
              ; Baz
        name: (ident))
    )
)
