test/corpus/schemas.txt
=========================
SCHEMAS: official example schema
=========================

// example IDL file

namespace MyGame;

attribute "priority";

enum Color : byte { Red = 1, Green, Blue }

union Any { Monster, Weapon, Pickup }

struct Vec3 {
  x:float;
  y:float;
  z:float;
}

table Monster {
  pos:Vec3;
  mana:short = 150;
  hp:short = 100;
  name:string;
  friendly:bool = false (deprecated, priority: 1);
  inventory:[ubyte];
  color:Color = Blue;
  test:Any;
}

root_type Monster;

----

(schema
    (comment)
    (namespace name: (ident))
    (custom_attribute name: (string_constant))

    (enum name: (ident) type: (scalar_type)
        (enum_field name: (ident) value: (integer_constant))
        (enum_field name: (ident))
        (enum_field name: (ident))
    )

    (union name: (ident)
        (union_field type: (ident))
        (union_field type: (ident))
        (union_field type: (ident))
    )

    (struct name: (ident)
        (struct_field name: (ident) type: (scalar_type))
        (struct_field name: (ident) type: (scalar_type))
        (struct_field name: (ident) type: (scalar_type))
    )

    (table name: (ident)
        (table_field name: (ident) type: (ident))
        (table_field name: (ident) type: (scalar_type) default: (integer_constant))
        (table_field name: (ident) type: (scalar_type) default: (integer_constant))
        (table_field name: (ident) type: (scalar_type))
        (table_field name: (ident) type: (scalar_type) default: (boolean_constant)
            (metadata (attribute name: (ident)) (attribute name: (ident) value: (integer_constant))))
        (table_field name: (ident) type: (vector_type element: (scalar_type)))
        (table_field name: (ident) type: (ident) default: (ident))
        (table_field name: (ident) type: (ident))
    )

    (root_type type: (ident))
)
