test/corpus/structs.txt
=========================
STRUCTS: empty
=========================

struct StructType {}

----

(schema (struct name: (ident)))

=========================
STRUCTS: array
=========================

struct Vec3 {
    v: [int: 3];
}

----

(schema
    (struct name: (ident)
        (struct_field name: (ident)
            type: (array_type element: (scalar_type) size: (integer_constant)))
    )
)

=========================
STRUCTS: attributes
=========================

struct StructType (force_align: 8) {}

----

(schema
    (struct name: (ident)
        (metadata (attribute name: (ident) value: (integer_constant)))
    )
)

=========================
STRUCTS: one field
=========================

struct StructType {
    a: int;
}

----

(schema
    (struct name: (ident)
        (struct_field name: (ident) type: (scalar_type))
    )
)

=========================
STRUCTS: two fields
=========================

struct StructType {
    a: int;
    b: OtherStruct;
}

----

(schema
    (struct name: (ident)
        (struct_field name: (ident) type: (scalar_type))
        (struct_field name: (ident) type: (ident))
    )
)

=========================
STRUCTS: field attributes
=========================

struct StructType {
    a: uint32 (hash);
}

----

(schema
    (struct name: (ident)
        (struct_field name: (ident)
            type: (scalar_type)
            (metadata (attribute name: (ident))))
    )
)

=========================
STRUCTS: no defaults
:error
=========================

struct StructType {
    a: int = 3;
}

----
