test/corpus/tables.txt
=========================
TABLES: empty
=========================

table TableType {}

----

(schema (table name: (ident)))

=========================
TABLES: attribute
=========================

table TableType (original_order) {}

----

(schema
    (table name: (ident) (metadata (attribute name: (ident))))
)

=========================
TABLES: missing ;
:error
=========================

table TableType {
    a: int
}

----

=========================
TABLES: single field
=========================

table TableType {
    a: int;
}

----

(schema
    (table name: (ident)
        (table_field name: (ident) type: (scalar_type))
    )
)

=========================
TABLES: multi field
=========================

table TableType {
    a: int;
    b: short;
}

----

(schema
    (table name: (ident)
        (table_field name: (ident) type: (scalar_type))
        (table_field name: (ident) type: (scalar_type))
    )
)

=========================
TABLES: default builtins
=========================

table TableType {
    a: int = 3;
    b: bool = true;
    c: float = 3.14;
}

----

(schema
    (table name: (ident)
        (table_field name: (ident) type: (scalar_type) default: (integer_constant))
        (table_field name: (ident) type: (scalar_type) default: (boolean_constant))
        (table_field name: (ident) type: (scalar_type) default: (float_constant))
    )
)

=========================
TABLES: default enum
=========================

table TableType {
    a: EnumType = Foo;
}

----

(schema
    (table name: (ident)
        (table_field name: (ident)
            type: (ident)
            default: (ident))
    )
)

=========================
TABLES: default string
=========================

table TableType {
    a: string = '';
    b: string = "";
}

----

(schema
    (table name: (ident)
        (table_field name: (ident) type: (scalar_type) default: (string_constant))
        (table_field name: (ident) type: (scalar_type) default: (string_constant))
    )
)

=========================
TABLES: default vector
=========================

table TableType {
    a: [int] = [];
}

----

(schema
    (table name: (ident)
        (table_field name: (ident)
            type: (vector_type element: (scalar_type))
            default: (vector_constant))
    )
)


=========================
TABLES: field single attribute
=========================

table TableType {
    a: int (deprecated);
}

----

(schema
    (table name: (ident)
        (table_field name: (ident) type: (scalar_type) (metadata (attribute name: (ident))))
    )
)


=========================
TABLES: field multiple attributes
=========================

table TableType {
    a: int (deprecated, id: 1);
    b: int (id: 2, deprecated);
}

----

(schema
    (table name: (ident)
        (table_field name: (ident)
            type: (scalar_type)
            (metadata
                (attribute name: (ident))
                (attribute name: (ident) value: (integer_constant))))
        (table_field name: (ident)
            type: (scalar_type)
            (metadata
                (attribute name: (ident) value: (integer_constant))
                (attribute name: (ident))))
    )
)

=========================
TABLES: field attribute and default
=========================

table TableType {
    a: int = 3 (deprecated);
}

----

(schema
    (table name: (ident)
        (table_field
            name: (ident)
            type: (scalar_type)
            default: (integer_constant)
                (metadata (attribute name: (ident))))
    )
)
