test/corpus/unions.txt
=========================
UNIONS: empty
=========================

union UnionType {}

----

(schema (union name: (ident)))


=========================
UNIONS: one member
=========================

union UnionType { TableOne }

----

(schema
    (union name: (ident)
        (union_field type: (ident))
    )
)

=========================
UNIONS: one member, comma
=========================

union UnionType { TableOne, }

----

(schema
    (union name: (ident)
        (union_field type: (ident))
    )
)

=========================
UNIONS: two members
=========================

union UnionType { TableOne, TableTwo, }

----

(schema
    (union name: (ident)
        (union_field type: (ident))
        (union_field type: (ident))
    )
)

=========================
UNIONS: named members
=========================

union UnionType {
    one: TableOne,
    two: TableTwo,
}

----

(schema
    (union name: (ident)
        (union_field
            alias: (ident)
            type: (ident))
        (union_field
            alias: (ident)
            type: (ident))
    )
)

=========================
UNIONS: comments
=========================

union UnionType { A, /* comment one */ b: B,
    // comment two
    // comment three
    C, // comment four
 }

----

(schema
    (union name: (ident)
        (union_field type: (ident))
        (comment)
        (union_field
            alias: (ident)
            type: (ident))
        (comment)
        (comment)
        (union_field type: (ident))
        (comment)
    )
)
